--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <h1 class="heading">
         <a href="index.html">
-        CARAVAaaaaan
+        CARAVAN
         </a>
       </h1>
       
